linuxkm/Kbuild: activate linker script with backward-compatible construct (tests good on 4.4);
linuxkm/linuxkm_wc_port.h: completely inhibit CONFIG_FORTIFY_SOURCE across the module when HAVE_LINUXKM_PIE_SUPPORT, for fidget-free backward compat;

linuxkm/module_hooks.c:
* add startup-time sanity check on fenceposts,
* enhance DEBUG_LINUXKM_PIE_SUPPORT with coverage for WOLFSSL_TEXT_SEGMENT_CANONICALIZER on the entire text segment,
* compute and report a hash on the stabilized text segment,
* fix wc_linuxkm_normalize_relocations() to allow span end == __wc_text_end, and
* add numerous verbose pr_err()s when DEBUG_LINUXKM_PIE_SUPPORT.

--- a/linuxkm/Kbuild
+++ b/linuxkm/Kbuild
@@ -177,7 +177,7 @@ endif
 
 ifeq "$(ENABLED_LINUXKM_PIE)" "yes"
 
-LDFLAGS_libwolfssl.o += -T $(src)/wolfcrypt.lds
+ldflags-y += -T $(src)/wolfcrypt.lds
 
 ifndef NM
     NM := nm
